--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,8 @@ stages:
           - task: NodeTool@0
             inputs:
               versionSource: 'spec'
-              versionSpec: '6.x'
+              versionSpec: '16.x'
           - task: Npm@1
             inputs:
               command: 'install'
-              workingDir: '/'
+              workingDir: '${System.DefaultWorkingDirectory}'
