Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,4 @@ stages:
           - task: Npm@1
             inputs:
               command: 'install'
-              workingDir: '${System.DefaultWorkingDirectory}'
+              workingDir: ${System.DefaultWorkingDirectory}
