--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,61 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+trigger: none # trigger = pipeline kab chalega
 
-trigger: none
+pool: # pool = pipeline kaha chalega
+ name: demo_agent_pool
 
-pool: linux
+stages: # pipeline me kya chize/ commands chalegi
+  - stage: buildPipeline
+    jobs:
+      - job: buildJob
+        steps:
+        - task: NodeTool@0
+          displayName: node_tool_install
+          inputs:
+            versionSource: 'spec'
+            versionSpec: '16.x'
+        
+        - task: Npm@1
+          displayName: npm install
+          inputs:
+            command: 'install'
+            workingDir: '$(System.DefaultWorkingDirectory)'
+        
+        - task: Npm@1
+          displayName: npm run build
+          inputs:
+            command: 'custom'
+            workingDir: '$(System.DefaultWorkingDirectory)'
+            customCommand: 'run build'
 
-stages:
-  - stage: 
+        - task: PublishBuildArtifacts@1
+          inputs:
+            PathtoPublish: '$(Build.ArtifactStagingDirectory)/build'
+            ArtifactName: 'drop'
+            publishLocation: 'Container'
+
+  - stage: deploy
     jobs:
       - job: 
         steps:
-          - task: NodeTool@0
-            inputs:
-              versionSource: 'spec'
-              versionSpec: '16.x'
-          - task: Npm@1
-            inputs:
-              command: 'install'
-              workingDir: ${System.DefaultWorkingDirectory}
+        - task: DownloadBuildArtifacts@1
+          inputs:
+            buildType: 'current'
+            downloadType: 'single'
+            artifactName: 'drop'
+            downloadPath: '$(System.ArtifactsDirectory)'
+            cleanDestinationFolder: true
+        - task: ArchiveFiles@2
+          inputs:
+            rootFolderOrFile: '$(System.ArtifactsDirectory)'
+            includeRootFolder: true
+            archiveType: 'zip'
+            archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+            replaceExistingArchive: true
+
+        - task: AzureWebApp@1
+          inputs:
+            azureSubscription: 'azureconnect'
+            appType: 'webAppLinux'
+            appName: 
+            package: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+            runtimeStack: 'NODE|22-lts'
